# Creova

./: .env.example  .gitignore  Dockerfile  MANIFEST.txt  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: 00-project-definition.md  01-product-requirements.md  02-architecture.md  03-domain-model.md  04-telegram-ux.md  05-security-and-privacy.md  06-data-model.md  07-api-and-events.md  08-operations.md  09-testing-strategy.md  10-roadmap.md  11-definition-of-done.md  12-threat-model.md  13-implementation-plan.md  14-verification.md  15-provider-and-conversation-design.md  16-audit-plan.md  references.md
docs/adr/: 0000-template.md  0001-modular-monolith.md  0002-python-aiogram-fastapi.md  0003-telegram-only-interface.md  0004-allowlist-by-telegram-id.md  0005-webhook-production-polling-local.md  0006-postgres-job-queue.md  0007-postgresql-system-of-record.md  0008-s3-object-storage.md  0009-provider-abstraction-openai-first.md  0010-idempotency-leases-outbox.md  0011-security-secrets-logging.md  0012-social-publishing-deferred.md  0013-command-wizard-ux.md  0014-quality-gates.md  0015-separate-prompt-assistants-and-image-renderers.md  0016-assisted-brief-and-explicit-confirmation.md  0017-secret-only-credential-injection.md  README.md
docs/diagrams/: context.mmd  generation-sequence.mmd
migrations/: env.py
migrations/versions/: 20260721_0001_assisted_image_persistence.py
scripts/: set_webhook.py
src/creova/: cli.py  composition.py  config.py  logging.py  main.py  worker.py
tests/integration/: test_gemini_smoke.py  (+1 more)
(+40 files in other folders)
