[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creova"
version = "0.1.0"
description = "Private Telegram bot for assisted AI image generation"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "aiogram>=3.20,<4",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic-settings>=2.9,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.30,<1",
  "alembic>=1.15,<2",
  "httpx>=0.28,<1",
  "structlog>=25.1,<26",
  "typer>=0.16,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.26,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
  "mypy>=1.15,<2",
]

[project.scripts]
creova-api = "creova.main:run_api"
creova-bot = "creova.main:run_polling"
creova-worker = "creova.worker:run_worker"
creova-admin = "creova.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["creova"]
warn_unused_ignores = true
